# autovod-plugin

./: .clang-format  CMakeLists.txt  buildspec.json
src/: detect.c  detect.h  img-utils.c  img-utils.h  ocr.c  ocr.h  plugin-main.c  string-utils.c  string-utils.h
src/game-detect/: smash-ultimate.c  smash-ultimate.h
